--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Gamedev Canvas Workshop</title>
+    <title>Noler</title>
     <style>
       * { padding: 0; margin: 0; }
-      canvas { background: rgb(255, 255, 255); display: block; margin: 0 auto; }
+      canvas { background: rgb(0, 0, 0); display: block; margin: 0 auto; }
     </style>
 </head>
 <body>
